<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="5dip"
                    android:paddingTop="5dip"
                    android:text="@string/sample_list_hardware" />

                <TextView
                    android:id="@+id/hardware"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="10dip"
                    android:paddingTop="5dip"
                    android:textSize="15sp" />

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="5dip"
                    android:paddingTop="5dip"
                    android:text="@string/sample_list_architecture" />

                <TextView
                    android:id="@+id/architecture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="10dip"
                    android:paddingTop="5dip"
                    android:textSize="15sp" />

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="5dip"
                    android:paddingTop="5dip"
                    android:text="@string/sample_list_feature" />

                <TextView
                    android:id="@+id/feature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="10dip"
                    android:paddingTop="5dip"
                    android:textSize="15sp" />

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="5dip"
                    android:paddingTop="5dip"
                    android:text="@string/sample_list_vendor" />

                <TextView
                    android:id="@+id/vendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="10dip"
                    android:paddingTop="5dip"
                    android:textSize="15sp" />

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="5dip"
                    android:paddingTop="5dip"
                    android:text="@string/sample_list_renderer" />

                <TextView
                    android:id="@+id/renderer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="10dip"
                    android:paddingTop="5dip"
                    android:textSize="15sp" />

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="5dip"
                    android:paddingTop="5dip"
                    android:text="@string/sample_list_version" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="10dip"
                    android:paddingTop="5dip"
                    android:textSize="15sp" />

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dip"
                    android:paddingLeft="5dip"
                    android:paddingTop="5dip"
                    android:text="@string/sample_list_extensions" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/extensions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dip"
                        android:paddingLeft="5dip"
                        android:paddingTop="5dip"
                        android:textSize="15sp" />
                </ScrollView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fitsSystemWindows="true" />

</FrameLayout>